--- a/.github/workflows/buildwin.yml
+++ b/.github/workflows/buildwin.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: choco install innosetup
       - run: python -m pip install setuptools wheel
-      - run: python -m pip install -r requirements.txt
+      - run: python -m pip install -U -r requirements.txt
       - working-directory: ./packaging
         run: ./windows.cmd
       - uses: actions/upload-artifact@v2
