--- a/packaging/linux_appimage/arpirobot-deploytool.desktop
+++ b/packaging/linux_appimage/arpirobot-deploytool.desktop
@@ -2,7 +2,11 @@
 Type=Application
 Name=ArPiRobot Deploy Tool
 Exec=AppRun
+StartupWMClass=ArPiRobot-DeployTool
 Comment=Code deployment and configuration tool for ArPiRobot robots. 
 Icon=arpirobot-deploytool
 Categories=
 Terminal=false
+X-AppImage-Version=0.4.0-beta7
+X-AppImage-Name=ArPiRobot-DeployTool
+X-AppImage-Arch=x86_64
