--- a/.github/workflows/buildwin.yml
+++ b/.github/workflows/buildwin.yml
@@ -5,6 +5,10 @@ jobs:
     runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+          architecture: 'x64'
       - run: choco install innosetup
       - run: python -m pip install setuptools wheel
       - run: python -m pip install -U -r requirements.txt
