--- a/.github/workflows/buildlinuxsrc.yml
+++ b/.github/workflows/buildlinuxsrc.yml
@@ -1,4 +1,4 @@
-name: Build Linux (x64 AppImage + Any Source)
+name: Build Linux (Any Source)
 on: [workflow_dispatch]
 jobs:
   Build:
@@ -13,8 +13,6 @@ jobs:
       - run: python -m pip install -U -r requirements.txt
       - working-directory: ./packaging
         run: ./linux_source.sh --tar yes --deb yes --python python
-      - working-directory: ./packaging
-        run: ./linux_appimage.sh
       - uses: actions/upload-artifact@v2
         with:
           name: Packages
