--- a/.github/workflows/buildlinux.yml
+++ b/.github/workflows/buildlinux.yml
@@ -1,4 +1,4 @@
-name: Build Linux (Any Source)
+name: Build Linux (x64)
 on: [workflow_dispatch]
 jobs:
   Build:
@@ -9,10 +9,9 @@ jobs:
         with:
           python-version: '3.10'
           architecture: 'x64'
-      - run: python -m pip install setuptools wheel
-      - run: python -m pip install -U -r requirements.txt
+      - run: python -m pip requests
       - working-directory: ./packaging
-        run: ./linux_source.sh --tar yes --deb yes --python python
+        run: ./linux_appimage.sh
       - uses: actions/upload-artifact@v2
         with:
           name: Packages
