--- a/.github/workflows/buildlinux.yml
+++ b/.github/workflows/buildlinux.yml
@@ -9,7 +9,7 @@ jobs:
         with:
           python-version: '3.10'
           architecture: 'x64'
-      - run: python -m pip requests
+      - run: python -m pip install requests
       - working-directory: ./packaging
         run: ./linux_appimage.sh
       - uses: actions/upload-artifact@v2
