--- a/.github/workflows/buildlinux.yml
+++ b/.github/workflows/buildlinux.yml
@@ -11,7 +11,7 @@ jobs:
           architecture: 'x64'
       - run: python -m pip install requests
       - working-directory: ./packaging
-        run: ./linux_appimage.sh
+        run: ./linux_source.sh
       - uses: actions/upload-artifact@v2
         with:
           name: Packages
