--- a/.github/workflows/buildlinux.yml
+++ b/.github/workflows/buildlinux.yml
@@ -10,6 +10,7 @@ jobs:
           python-version: '3.10'
           architecture: 'x64'
       - run: python -m pip install requests
+      - run: python -m pip install -r requirements.txt
       - working-directory: ./packaging
         run: ./linux_source.sh
       - uses: actions/upload-artifact@v2
