--- a/.github/workflows/buildlinux.yml
+++ b/.github/workflows/buildlinux.yml
@@ -2,7 +2,7 @@ name: Build Linux (x64)
 on: [workflow_dispatch]
 jobs:
   Build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v3
@@ -13,7 +13,7 @@ jobs:
       - run: python -m pip install setuptools wheel
       - run: python -m pip install -U -r requirements.txt
       - working-directory: ./packaging
-        run: ./linux_source.sh --tar yes --deb yes --python python
+        run: ./linux_source.sh --tar no --deb no --run yes --python python
       - uses: actions/upload-artifact@v2
         with:
           name: Packages
