--- a/.github/workflows/buildwin.yml
+++ b/.github/workflows/buildwin.yml
@@ -2,7 +2,7 @@ name: Build Windows (x64)
 on: [workflow_dispatch]
 jobs:
   Build:
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v3
