--- a/.github/workflows/buildrelease.yml
+++ b/.github/workflows/buildrelease.yml
@@ -51,7 +51,7 @@ jobs:
       - run: python -m pip install setuptools wheel
       - run: python -m pip install -U -r requirements.txt
       - working-directory: ./packaging
-        run: ./linux_source.sh --tar no --deb no --run yes --python python
+        run: ./linux_source.sh --tar no --deb yes --run yes --python python
       - uses: actions/upload-artifact@v2
         with:
           name: dist-linux
