--- a/.github/workflows/buildrelease.yml
+++ b/.github/workflows/buildrelease.yml
@@ -7,26 +7,25 @@ jobs:
   BuildWindows:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
           architecture: 'x64'
-      - run: choco install innosetup
       - run: python -m pip install setuptools wheel
       - run: python -m pip install -U -r requirements.txt
       - working-directory: ./packaging
         run: ./windows.cmd
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: dist-windows
           path: ./packaging/dist/*
           retention-days: 1
   BuildMacOS:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
           architecture: 'x64'
@@ -34,25 +33,24 @@ jobs:
       - run: python -m pip install -U -r requirements.txt
       - working-directory: ./packaging
         run: ./macos.sh --python python
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: dist-macos
           path: ./packaging/dist/*
           retention-days: 1
   BuildLinux:
     runs-on: ubuntu-latest
+    container: python:3.10.14-bullseye
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.10'
-          architecture: 'x64'
+      - uses: actions/checkout@v4
+      - run: apt-get update
+      - run: apt-get install -y wget binutils file libglib2.0-0 libfuse2
       - run: python -m pip install requests
       - run: python -m pip install setuptools wheel
       - run: python -m pip install -U -r requirements.txt
       - working-directory: ./packaging
-        run: ./linux_source.sh --tar no --deb yes --run yes --python python
-      - uses: actions/upload-artifact@v2
+        run: ./linux.sh
+      - uses: actions/upload-artifact@v4
         with:
           name: dist-linux
           path: ./packaging/dist/*
